structmeta-tests/tests/compile_fail/to_tokens/invalid_argument.rs
use structmeta::ToTokens;
use syn::LitStr;
#[derive(ToTokens)]
struct TestType {
    #[to_tokens(xxx = 123)]
    braket_token: syn::token::Bracket,
    str: LitStr,
}

fn main() {}
