structmeta-tests/tests/compile_fail/to_tokens/invalid_argument.stderr
error: expected string literal.
 --> $DIR/invalid_argument.rs:5:17
  |
5 |     #[to_tokens(xxx = 123)]
  |                 ^^^
